获取微信用户信息

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ DB_DATABASE=adonis
 
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
+
+APP_ID=xxxxxxxxx
+APP_SECRET=xxxxxxxxxxx
+REDIRECT_URI=/wechat/oauthCallback
